[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/4851475.png" type="Texture" id=1]
[ext_resource path="res://high_tech_hop_grenade.gd" type="Script" id=2]
[ext_resource path="res://grenade_explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound_effects/NenadSimic - Muffled Distant Explosion.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=2]
resource_name = "throw"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.5, 8 )

[node name="high_tech_hop_grenade" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/throw = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -2 )
shape = SubResource( 3 )

[node name="disappear_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="grenade_explosion" parent="." instance=ExtResource( 3 )]

[node name="explosion_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 24.0
pitch_scale = 1.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="finished" from="explosion_sound" to="." method="_on_explosion_sound_finished"]
